moved VUE link, added fontAwesome link, started structuring html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- link bootstrap v5.2 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-    <!-- link to VUE -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- link to fontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     <!-- link to CSS -->
     <link rel="stylesheet" href="./css/style.css">
@@ -20,16 +20,25 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-12">
                     <h1 id="app">{{ message }}</h1>
                 </div>
+                <div class="col-12">
+                    <ul>
+                        <li>
+
+                        </li>
+                    </ul>
+                </div>
+
             </div>
         </div>
     </main>
 
 
 
-
+    <!-- link to VUE -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- import JS script -->
     <script src="./js/script.js"></script>
 </body>
