--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <ul>
                             <li class="d-flex justify-content-between" v-for="element in toDoList">
                                 <p class="d-inline-block my-auto" :class="(element.done === true) ? 'doneAction' : ''" 
-                                @click="(element.done === true) ? element.done === false : element.done === true">
+                                @click="(element.done === true) ? element.done = false : element.done = true">
                                     {{element.action}}
                                 </p>
                                 <i class="fa-solid fa-square-xmark my-auto"></i>
