--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                     <div class="col-12 text-center">
                         <h1>{{ listTitle }}</h1>
                     </div>
+                    <div class="col-12 text-center">
+                        <label for="inputAddToDoItem"> Inserisci qui un nuovo impegno: </label>
+                        <input type="text" id="inputAddToDoItem" class="m-2">
+                    </div>
                     <div class="col-12">
                         <ul>
                             <li class="d-flex justify-content-between" v-for="element in toDoList">
